--- a/files/news.css
+++ b/files/news.css
@@ -1,7 +1,7 @@
 .asd-news {
-    position:relative;
-    clear:both;
-    margin:3px 0;
+    position: relative;
+    clear: both;
+    margin: 10px 0;
 }
 
 .asd-news h3 {
@@ -9,11 +9,29 @@
 }
 
 .asd-picture {
-    margin:3px 0;
-    border:2px solid #fff;
+    margin: 3px 0;
+    border: 2px solid #fff;
 }
 
 .asd-news-date {
     font-weight: bold;
-    margin:2px 0 8px 0;
+    margin: 2px 0 8px 0;
+}
+
+.asd-pager-left, .asd-pager-right {
+    padding: 6px 12px;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    background:#fff;
+}
+
+.asd-pager-right {
+    float: right;
+}
+
+.asd-pager-right:after {
+    content: "";
+    display: block;
+    clear: both;
 }
